# cookiecutter-django

./: README.md  cookiecutter.json
.github/workflows/: update-deps.yml
hooks/: post_gen_project.py
scripts/: sync_deps.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  biome.jsonc  compose.prod.yaml  compose.yaml  manage.py  package.json  pyproject.toml  vite.config.js
{{cookiecutter.project_slug}}/.devcontainer/: compose.devcontainer.yaml  db.env  devcontainer.json  on-create.sh  post-create.sh
{{cookiecutter.project_slug}}/.devcontainer/fish/: config.fish
{{cookiecutter.project_slug}}/.devcontainer/fish/completions/: uv.fish  uvx.fish
{{cookiecutter.project_slug}}/containers/caddy/: Caddyfile
{{cookiecutter.project_slug}}/containers/django/: Containerfile  start
{{cookiecutter.project_slug}}/containers/postgres/: postgresql.conf
{{cookiecutter.project_slug}}/docs/instructions/: django-templates.instructions.md  git.instructions.md  python-mixins.instructions.md  python-packages.instructions.md
{{cookiecutter.project_slug}}/static/js/: main.js
{{cookiecutter.project_slug}}/static/sass/: _variables.scss  main.scss
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/api/: apps.py  filters.py  pagination.py  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/core/: apps.py  filters.py  models.py  signals.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: __init__.py  base.py  development.py  production.py  test.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: 404.html  500.html  base.html
