
[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
requires-python = ">={{ cookiecutter.python_version }}"

dependencies = [
    "django~=6.0",
    "psycopg[c,pool]~=3.3",
    "django-environ",
    "argon2-cffi",
    "whitenoise[brotli]~=6.12",
    "granian~=2.7",
{%- if cookiecutter.use_vite == "y" %}
    "django-vite>=3.1.0",
{%- endif %}
{%- if cookiecutter.use_rest_api == "y" %}
    "djangorestframework>=3.17.1",
    "django-filter>=25.2",
    "drf-spectacular>=0.29.0",
    "drf-nested-routers>=0.95.0",
    "django-cors-headers>=4.9.0",
{%- endif %}
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "tools" },
    { include-group = "stubs" },
    "django-watchfiles>=1.4.0",
]
lint = ["djade>=1.9.0", "mypy~=1.20", "ruff"]
stubs = [
    "django-stubs[compatible-mypy]",
{%- if cookiecutter.use_rest_api == "y" %}
    "djangorestframework-stubs[compatible-mypy]",
{%- endif %}
]
test = [
    "coverage~=7.14",
    "factory-boy~=3.3",
    "pytest-django~=4.12",
    "pytest-sugar~=1.1",
    "pytest~=9.0",
]
tools = ["commitizen>=4.16.2", "prek>=0.4.0"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
# Reference: https://github.com/astral-sh/ruff
cache-dir = ".cache/ruff/"
line-length = 99
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
exclude = [".tox", ".git", "**/static/CACHE/*", "docs", "node_modules", ".venv"]

[tool.ruff.lint]
select = [
    "RUF",   # Ruff-specific linting rules
    "LOG",   # flake8-logging
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "COM",   # flake8-commas
    "DJ",    # flake8-django
    "E",     # pycodestyle
    "F",     # pyflakes
    "G",     # flake8-logging-format
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "INT",   # flake8-gettext
    "PIE",   # flake8-pie
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PERF",  # Perflint
    "PL",    # Pylint
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "TC",    # flake8-type-checking
    "EXE",   # flake8-executable
    "Q",     # flake8-quotes
]
ignore = [
    "COM812", # May be incompatible with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["E402"]
"**/tests/**/*.py" = ["S", "D", "ANN", "PLR2004", "PLR0913"]
"**/migrations/*.py" = ["DJ", "RUF", "E", "N", "D"]
"**/settings/*.py" = ["F4"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
strict = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.djlint]
indent = 2
profile = "django"
max_line_length = 119
ignore = "H021,H031"

[tool.mypy]
cache_dir = ".cache/mypy/"
pretty = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
files = ["**/*.py"]
plugins = [
    "mypy_django_plugin.main",
{%- if cookiecutter.use_rest_api == "y" %}
    "mypy_drf_plugin.main",
{%- endif %}
]

[[tool.mypy.overrides]]
module = "*.settings.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.admin"
disable_error_code = ["misc", "assignment"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "{{ cookiecutter.project_slug }}.settings.test"

[tool.pytest.ini_options]
addopts = ["--ds={{ cookiecutter.project_slug }}.settings.test", "--reuse-db"]
python_files = ["tests.py", "test_*.py"]
cache_dir = ".cache/pytest/"
